# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  05 June 2006; Roy Marples <uberlord@gentoo.org>:

    Restore the man user/group, #113298 thanks to Chris Gianelloni.

    Fix typo in /sbin/rc, #135323 thanks to Ed Catmur.

    rc now stops services again, #135340.
  
  02 June 2006; Roy Marples <uberlord@gentoo.org>:

    Allow LC_* and LANG vars through to runscript.sh by default.

    net.lo now comes after bootmisc, #135118 thanks to Oldrich Jedlicka.

    arping.sh now has MAC address support, #134253 thanks to Oldrich Jedlicka.

    pppd.sh now updates secret files with a blank password, #134337

    Remove swapon call from /sbin/rc as localmount already calls it,
    #47932 and also a partial fix for #134489

  30 May 2006; Roy Marples <uberlord@gentoo.org>:

    Allow users to specify netplugd options.

    Really fix is_xenU_sys, #134571 thanks to Stefan Hellermann.

  24 May 2006; Roy Marples <uberlord@gentoo.org>:

    Ensure that we call halt.sh in a new shell with LC_ALL=C so that we don't
    load any locale information which may stop us unmounting /usr, #128848
    and #133090.

    Don't set clock for OpenVZ systems, #133265 thanks to Kir Kolyshkin.

    Don't remount / in checkroot for unionfs /, #129975 thanks to Daniel.

    Don't stop net interfaces / is unionfs and a branch is network mounted.

* baselayout-1.12.0 (23 May 2006)

  23 May 2006; Roy Marples <uberlord@gentoo.org>:

    halt.sh can now deal with unionfs a bit better, #99682.

  16 May 2006; Roy Marples <uberlord@gentoo.org>:

    Always report Xen domU domains correctly, #107976.

  15 May 2006; Roy Marples <uberlord@gentoo.org>:

    Always test for space at the end of the bridge name.

  14 May 2006; Roy Marples <uberlord@gentoo.org>:

    Don't stop coldplugged services when changing runlevels, #113264.

    Only report inactive start once.

  07 May 2006; Roy Marples <uberlord@gentoo.org>:
